--- a/css/Footer.css
+++ b/css/Footer.css
@@ -10,7 +10,7 @@
 /* ------------------------------ footer Section ----------------------------*/
 footer#Footer {
 	width: 100%;
-	padding-bottom: 20px;
+	padding-bottom: 10px;
 	text-align: center;
 	background: linear-gradient(
       rgba(0, 0, 0, 0.85), 
@@ -50,11 +50,27 @@ footer .FooterNoPadding{
 	}
 }
 
+footer .FooterLink {
+	text-align: left;
+	font-size: 16px;
+	line-height: 14px;
+	color:#d9d9d9;
+}
+footer .FooterLink a {
+	text-align: left;
+	color:#d9d9d9;
+}
+
 footer .FooterEnd {
 	color: #fff;
 	border-style: solid;
     border-width: 1px 0px 0px 0px;
     border-color: rgba(255,255,255,0.31);
     transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
-    padding: 30px 0px 30px 0px;
+    padding: 10px 0px 30px 0px;
+}
+
+footer .FooterIcon {
+	font-size: 12px;
+	margin-left: -10px;
 }
