--- a/css/BuildingPWD.css
+++ b/css/BuildingPWD.css
@@ -14,13 +14,12 @@ div#TopicBanner {
 	width: 100%;
 	height: 100vh;
 	text-align: center;
-	background: no-repeat linear-gradient(
+	overflow: hidden;
+	background: no-repeat center center fixed linear-gradient(
 	      rgba(0, 0, 0, 0.65), 
 	      rgba(0, 0, 0, 0.65)
 	    ), url(../assets/img/Banner/KeysLock.png);
-	background-attachment: fixed;
 	background-size: cover;
-	background-position: center ;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
