--- a/css/mmenu/Nav.css
+++ b/css/mmenu/Nav.css
@@ -1,3 +1,7 @@
+.NavfontS {
+    font-family: 'Noto Sans TC', sans-serif;
+    unicode-range: 'U+4E00-9FFF';
+}
 
 nav:not(.mm-menu) {
 	display: none;
